# fpl_api

./: Cargo.toml  README.md  endpoints.md
fpl_api_docs/: schemas.md
fpl_api_docs/schemas/: bootstrap-static.md  dream-team.md  event-status.md  fixtures.md  league-standings.md  live-event.md  manager-picks.md  manager.md
src/: client.rs  lib.rs
src/client/: bootstrap_static.rs  dream_team.rs  fixtures.rs  league.rs  live.rs  manager.rs  mod.rs  player.rs  set_piece.rs  status.rs
src/models/: bootstrap_static.rs  dream_team.rs  element_summary.rs  fixture.rs  league.rs  live.rs  manager.rs  manager_history.rs  mod.rs  picks.rs  set_piece.rs  status.rs
tests/: client_test.rs
