[package]
name = "fpl_api"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
thiserror = "1.0"
log = "0.4"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = "0.3"
