[package]
name = "fpl_client"
version = "0.1.1"
edition = "2024"
description = "A Rust wrapper for the Fantasy Premier League API"
license = "MIT"
repository = "https://github.com/sh1zer/fpl_api"
documentation = "https://docs.rs/fpl_client"
keywords = ["fpl", "fantasy", "premier-league", "api"]
readme = "README.md"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
thiserror = "1.0"
log = "0.4"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = "0.3"
